--- a/style.css
+++ b/style.css
@@ -347,7 +347,91 @@ footer{
 
 /* ===============Start Media================ */
 
-@media (max-width: 645px) {
+@media (max-width: 1286px){
+    .main_child{
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 1225px){
+    .content_child{
+        width: 1000px;
+    }
+    .content_child h2{
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 1140px){
+    .hero_right img{
+        width: 500px;
+        height: 600px;
+    }
+}
+
+@media (max-width: 1130px){
+    section img{
+        width: 450px;
+    }
+}
+
+@media (max-width: 1040px){
+    .hero_left .icon i{
+        font-size: 30px;
+    }
+    .hero_right img{
+        width: 400px;
+        height: 500px;
+    }
+    .hero_left .btns{
+        margin: 90px 0;
+        gap: 50px;
+    }
+    section img{
+        width: 400px;
+    }
+}
+
+@media (max-width: 1025px){
+    .content_child{
+        width: 800px;
+    }
+}
+
+@media (max-width: 910px){
+    .hero{
+        flex-direction: column;
+    }
+    .hero_right{
+        margin-top: 50px;
+    }
+    .section{
+        padding-top: 100px;
+    }
+    .top_left{
+        margin: 50px;
+    }
+    .bottom_right{
+        margin-top: 50px;
+    }
+    .section_bottom{
+        flex-direction: column;
+    }
+    .section_top{
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 820px){
+    .content_child{
+        width: 700px;
+    }
+    .content_child img{
+        display: none;
+    }
+}
+
+@media (max-width: 785px) {
 
     .ul li{
         display: none;
@@ -355,6 +439,57 @@ footer{
 
     .menu {
         display: block !important;
+    }
+}
+
+@media (max-width: 720px){
+    .content_child{
+        width: 550px;
+    }
+}
+
+@media (max-width: 570px) {
+    section img{
+        width: 300px;
+        height: 370px;
+    }
+    section hr{
+        display: none;
+    }
+    .content_child{
+        width: 450px;
+    }
+}
+
+@media (max-width: 470px) {
+    .content_child{
+        width: 300px;
+    }
+}
+
+@media (max-width: 430px) {
+    section img{
+        width: 260px;
+        height: 340px;
+    }
+}
+
+@media (max-width: 425px){
+    .hero_right img{
+        width: 350px;
+        height: 400px;
+    }
+    .hero_left .icon i{
+        font-size: 25px;
+    }
+    .hero_left .icons{
+        gap: 60px;
+    }
+}
+
+@media (max-width: 410px){
+    .child_parent .image{
+        display: none;
     }
 }
 
